// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should render a disabled text area 1`] = `
<styled.div>
  <Styled(TextareaAutosize)
    className=""
    disabled={true}
    gifsEnabled={false}
    hasGif={true}
    id="test-textarea"
    name="test-textarea"
    rows={2}
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render a text area 1`] = `
<styled.div>
  <Styled(TextareaAutosize)
    className=""
    gifsEnabled={false}
    hasGif={true}
    id="test-textarea"
    name="test-textarea"
    rows={2}
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render a text area with a different amount of rows 1`] = `
<styled.div>
  <Styled(TextareaAutosize)
    className=""
    gifsEnabled={false}
    hasGif={true}
    id="test-textarea"
    name="test-textarea"
    rows={20}
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render a text area with placeholder text 1`] = `
<styled.div>
  <Styled(TextareaAutosize)
    className=""
    gifsEnabled={false}
    hasGif={true}
    id="test-textarea"
    name="test-textarea"
    placeholder="test placeholder :)"
    rows={2}
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render an invalid text area 1`] = `
<styled.div>
  <Styled(TextareaAutosize)
    className="is-invalid-input"
    gifsEnabled={false}
    hasGif={true}
    id="test-textarea"
    name="test-textarea"
    rows={2}
  />
</styled.div>
`;
